中伝 & solved too low player score can cause exception

--- a/iidxrank/static/css/rankpage_common.css
+++ b/iidxrank/static/css/rankpage_common.css
@@ -130,7 +130,8 @@ body { font-family: 'M+ 1c medium', 'Malgun Gothic', NanumBarunGothicOTF,"Helvet
 .dan16 { background-color: #06c !important; }
 .dan17,
 .dan18 { background-color: #c00 !important; }
-.dan19 { background-color: #cc0 !important; }
+.dan19 { background-color: #ccb !important; }
+.dan20 { background-color: #cc0 !important; }
 
 #url { width:200px; }
 #menu { padding: 20px; text-align: right; }
